--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -22,6 +22,10 @@
   font-size: large;
 }
 
+.messageBox{
+  height: 5rem;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
